--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -91,14 +91,12 @@
               <label class="block text-sm font-medium text-gray-700">
                 Groep (optioneel)
               </label>
-              <div class="mt-1">
-                <%= f.select :usergroup_id, Usergroup.all.collect { |x| [x.name, x.id] }, include_blank: true, class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
-              </div>
+              <%= f.select :usergroup_id, Usergroup.all.collect { |x| [x.name, x.id] }, { include_blank: true }, { class: "mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md" } %>
             </div>
 
             <div class="flex items-start col-span-3 md:justify-between">
               <div class="flex items-center h-5">
-                <%= f.check_box :public, { checked: @event.invitation_code? }, class: "focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded" %>
+                <%= f.check_box :public, { checked: @event.invitation_code?, class: "focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded" } %>
               </div>
               <div class="ml-3 text-sm">
                 <label class="font-medium text-gray-700">Plebs</label>
