fix button block and remove scss

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -57,7 +57,5 @@
 </div>
 
 <div class="flex justify-center mt-5">
-  <%= button_to new_event_path, method: :get, class: "inline-flex items-center px-6 py-3 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" do %>
-    Nieuwe activiteit
-  <% end %>
+  <%= button_to "Nieuwe activiteit", new_event_path, method: :get, class: "inline-flex items-center px-6 py-3 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
 </div>
