fix z index on user menu on desktop

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -101,7 +101,7 @@
                 </button>
               </div>
 
-              <div class="origin-top-right absolute right-0 mt-2 w-screen max-w-md rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none opacity-0 scale-95" role="menu" tabindex="-1" data-dropdown-target="menu">
+              <div class="z-10 origin-top-right absolute right-0 mt-2 w-screen max-w-md rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none opacity-0 scale-95" role="menu" tabindex="-1" data-dropdown-target="menu">
                 <div class="overflow-hidden">
                   <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8 lg:grid-cols-2">
                     <% user_items.each do |name, options| %>
