Rename kind column + translations

--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -24,9 +24,9 @@
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :soort, class: 'control-label col-sm-2' %>
+    <%= f.label :kind, class: 'control-label col-sm-2' %>
     <div class="col-sm-10">
-      <%= f.text_field :soort, class: 'form-control' %>
+      <%= f.text_field :kind, class: 'form-control' %>
     </div>
   </div>
   <div class="form-group">
