Update beer UI  (#260)
* Work on beer table

* Add shared pagination layout

* No image

* Review form

* Use helper instead of defining every time

* Cleanup

* Pagination now looks pretty and works as well

* Also template gap

* Undo removal of page=1 from links

--- a/app/frontend/packs/application.css
+++ b/app/frontend/packs/application.css
@@ -1,5 +1,6 @@
 /*@import '~flatpickr';*/
 /*@import '~tablesort';*/
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+@import 'trix/dist/trix';
