--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -3,9 +3,10 @@
 <% end %>
 
 <div class="row">
-  <div class="col-md-6">
-    <%== pagy_nav(@pagy) %>
-  </div>
+  <% if current_user&.active? %>
+    <%= link_to 'Voeg bier toe', new_beer_path, :class => 'btn btn-block btn-primary' %>
+  <% end %>
+
   <div class="col-md-6">
     <div class="pagination">
       <div class="pagination">
@@ -24,66 +25,4 @@
   </div>
 </div>
 
-
-<table id="bier" class="table table-hover table-responsive-sm">
-  <thead>
-  <tr>
-    <col width="20%">
-    <col width="20%">
-    <col width="10%">
-    <col width="20%">
-    <col width="20%">
-    <col width="10%">
-
-    <% ordering = params[:order] == "asc" ? "desc" : "asc" %>
-
-    <% case params[:sort]
-       when "name" %>
-      <% name_arrow = params[:order] == "asc" ? " ↓" : " ↑" %>
-    <% when "soort" %>
-      <% soort_arrow = params[:order] == "asc" ? " ↓" : " ↑" %>
-    <% when "grade" %>
-      <% grade_arrow = params[:order] == "asc" ? " ↓" : " ↑" %>
-    <% when "brewer" %>
-      <% brewer_arrow = params[:order] == "asc" ? " ↓" : " ↑" %>
-    <% when "country" %>
-      <% country_arrow = params[:order] == "asc" ? " ↓" : " ↑" %>
-    <% when "review_count" %>
-      <% review_count_arrow = params[:order] == "asc" ? " ↓" : " ↑" %>
-    <% end %>
-
-    <th><%= link_to "Naam" + name_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({ sort: :name, order: ordering }) %></th>
-    <th><%= link_to "Soort" + soort_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({ sort: :soort, order: ordering }) %></th>
-    <th><%= link_to "Cijfer" + grade_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({ sort: :grade, order: ordering }) %></th>
-    <th><%= link_to "Brouwer" + brewer_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({ sort: :brewer, order: ordering }) %></th>
-    <th><%= link_to "Land" + country_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({ sort: :country, order: ordering }) %></th>
-    <th><%= link_to "Aantal reviews" + review_count_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({ sort: :review_count, order: ordering }) %></th>
-  </tr>
-  </thead>
-  <tbody>
-  <% @beers.each do |beer| %>
-    <% case current_user&.reviews&.find_by(beer: beer)&.rating
-       when 1..4 %>
-      <tr class="danger">
-    <% when 4..6 %>
-      <tr class="info">
-    <% when 6..10 %>
-      <tr class="success">
-    <% else %>
-      <tr class="default">
-    <% end %>
-
-    <td><%= link_to beer.name, beer %></td>
-    <td><%= beer.soort %></td>
-    <td><%= beer.cijfer? %></td>
-    <td><%= beer.brewer %></td>
-    <td><%= beer.country %></td>
-    <td><%= beer.reviews.count %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
-
-<% if current_user&.active? %>
-  <%= link_to 'Voeg bier toe', new_beer_path, :class => 'btn btn-block btn-primary' %>
-<% end %>
+<%= render 'table' %>
