--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -55,7 +55,7 @@
           </tr>
           <tr>
             <td>Soort:</td>
-            <td><%= @beer.soort %></td>
+            <td><%= @beer.kind %></td>
           </tr>
           <tr>
             <td>ALC:</td>
