--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -9,8 +9,11 @@
         <div class="relative h-full">
           <div class="border-b border-gray-200 mb-2 pb-2">
             <div class="flex items-center justify-between">
-              <div>
-                <i class="fas fa-clock fa-fw"></i> <%= @event.date.strftime('%d-%m-%Y %H:%M') %>
+              <div class="flex">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+                <%= @event.date.strftime('%d-%m-%Y %H:%M') %>
                 <%= "tot #{@event.end_time.strftime('%d-%m-%Y %H:%M')}" if @event.end_time? %>
               </div>
               <div class="flex items-center justify-between">
@@ -71,7 +74,13 @@
 
           <% if @event.location.present? %>
             <div class="border-t border-gray-200 mt-2 pt-2">
-              <p><i class="fa fa-map-marker fa-fw"></i> <%= @event.location %></p>
+              <div class="flex">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+                </svg>
+                <%= @event.location %>
+              </div>
               <div class="embed-responsive embed-responsive-4by3">
                 <iframe
                   class="embed-responsive-item w-full"
