--- a/app/views/users/settings/_form_usergroups.html.erb
+++ b/app/views/users/settings/_form_usergroups.html.erb
@@ -1,78 +1,54 @@
-<h2 class="text-2xl mt-4">Lid</h2>
-<div class="my-6 flex flex-col">
-  <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
-    <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
-      <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-        <table class="min-w-full divide-y divide-gray-200">
-          <thead class="bg-gray-100">
-            <tr>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Groepnaam</th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Actie</th>
-            </tr>
-          </thead>
-          <tbody class="divide-y divide-gray-200">
-            <% @member.each_with_index do |group, index| %>
-              <tr class="<%= index % 2 == 0 ? "bg-white" : "bg-gray-50" %>">
-                <%= form_for(@user.groups.find_by(group_id: group.id, user_id: @user.id), html: {method: :delete}) do |f| %>
-                  <%= f.hidden_field :group_id %>
-                  <%= f.hidden_field :user_id %>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                    <%= group.name %>
-                  </td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                  <% if current_user.admin? %>  
-                  <button type="submit" class="btn btn-default btn-sm flex text-hamers-red-500">
-                      <%= heroicon('trash', style: :outline, class_name: "h-6 w-6") %>
-                      Verwijder uit deze groep
-                    </button>
-                  <% else %>
-                    Kan lidmaatschap niet aanpassen
-                  <% end %>
-                  </td>
-                <% end %>
-              </tr>
+<h2 class="text-2xl mt-4 text-center">Account is lid van:</h2>
+<div class="mt-4">
+  <div class="list-container">
+    <% @member.each_with_index do |group, index| %>
+      <div class="list-items flex flex-col sm:flex-row items-center justify-between max-w-lg mx-auto border-b py-4 dark:bg-gray-700 rounded-md my-1 px-4">
+        <% if current_user.admin? %>
+          <div class="flex flex-row items-center space-x-4">
+            <div>
+              <h1 class="tracking-tight dark:text-gray-100"><%= group.name %></h1>
+            </div>
+          </div>
+          <div>
+            <%= form_for(@user.groups.find_by(group_id: group.id, user_id: @user.id), html: {method: :delete}) do |f| %>
+              <%= f.hidden_field :group_id %>
+              <%= f.hidden_field :user_id %>
+              <button type="submit" class="bg-red-100 rounded-md px-4 py-1 text-red-800 text-sm font-semibold mt-4 sm:mt-0">
+                <%= heroicon('trash', style: :outline, class_name: "h-4 w-4 inline-block") %>Verwijder
+              </button>
             <% end %>
-          </tbody>
-        </table>
+          </div>
+        <% else %>
+          <div class="flex flex-row items-center space-x-4">
+            <h1 class="tracking-tight dark:text-gray-100"><%= group.name %><h1>
+          </div>
+        <% end %>
       </div>
-    </div>
+    <% end %>
   </div>
 </div>
 <% if current_user.admin? %>
-<h2 class="text-2xl mt-4">Geen lid</h2>
-<div class="my-6 flex flex-col">
-  <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
-    <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
-      <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-        <table class="min-w-full divide-y divide-gray-200">
-          <thead class="bg-gray-100">
-            <tr>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Groepnaam</th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Actie</th>
-            </tr>
-          </thead>
-          <tbody class="divide-y divide-gray-200">
-              <% @notmember.each_with_index do |group, index| %>
-                <tr class="<%= index % 2 == 0 ? "bg-white" : "bg-gray-50" %>">
-                  <%= form_for(@user.groups.new(group_id: group.id, user_id: @user.id)) do |f| %>
-                    <%= f.hidden_field :group_id %>
-                    <%= f.hidden_field :user_id %>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                      <%= group.name %>
-                    </td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                      <button type="submit" class="btn btn-default btn-sm flex">
-                        <%= heroicon('plus', style: :outline, class_name: "h-6 w-6") %>
-                        Voeg toe aan deze groep
-                      </button>
-                    </td>
-                  <% end %>
-                </tr>
-              <% end %>
-          </tbody>
-        </table>
+<h2 class="text-2xl mt-4 text-center">Account is NIET lid van:</h2>
+<div class="mt-4">
+  <div class="list-container">
+    <% @notmember.each_with_index do |group, index| %>
+      <div class="list-items flex flex-col sm:flex-row items-center justify-between max-w-lg mx-auto border-b py-4 dark:bg-gray-700 rounded-md my-1 px-4">
+        <div class="flex flex-row items-center space-x-4">
+          <div>
+            <h1 class="tracking-tight dark:text-gray-100"><%= group.name %></h1>
+          </div>
+        </div>
+        <div>
+          <%= form_for(@user.groups.new(group_id: group.id, user_id: @user.id)) do |f| %>
+            <%= f.hidden_field :group_id %>
+            <%= f.hidden_field :user_id %>
+            <button type="submit" class="bg-green-100 rounded-md px-4 py-1 text-green-800 text-sm font-semibold mt-4 sm:mt-0">
+              <%= heroicon('plus', style: :outline, class_name: "h-4 w-4 inline-block") %>Voeg toe
+            </button>
+          <% end %>
+        </div>
       </div>
-    </div>
+    <% end %>
   </div>
 </div>
 <% end %>
