--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,7 +2,7 @@
   Activiteiten: { description: "Wat gaan we doen?", path: events_path, icon: 'calendar' },
   Bier: { description: "Heb je nog wat gedronken?", path: beers_path, icon: 'emoji-happy' },
   Leden: { description: "Overzicht van onze leden", path: users_path, icon: 'user' },
-  Groupen: { description: "Groepen binnen het dispuut", path: groups_path, icon: 'user-group' },
+  Groepen: { description: "Groepen binnen het dispuut", path: groups_path, icon: 'user-group' },
   Stickers: { description: "Waar hangen onze stickers?", path: stickers_path, icon: 'chip' },
   Recepten: { description: "Wat hebben wij gebrouwen?", path: recipe_index_path, icon: 'beaker' },
   Vergaderingen: { description: "Lees hier de notulen", path: meetings_path, icon: 'chat-alt-2' },
